Removed IDE warning
Signed-off-by: Martin Bluemel <martin.bluemel@web.de>